manifests/agent-execution-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fleet-mcp
  namespace: agent-execution
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30800
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: fleet-mcp
  sessionAffinity: None
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  labels:
    agent-role: s10e
    device-id: 10.0.0.10
    device-type: mobile
  name: s10e
  namespace: agent-execution
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: ssh
    port: 8022
    protocol: TCP
    targetPort: 8022
  - name: ollama
    port: 11434
    protocol: TCP
    targetPort: 11434
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    agent-role: s20
    device-id: 10.0.0.20
    device-type: mobile
  name: s20
  namespace: agent-execution
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: ssh
    port: 8022
    protocol: TCP
    targetPort: 8022
  - name: ollama
    port: 11434
    protocol: TCP
    targetPort: 11434
  sessionAffinity: None
  type: ClusterIP
